; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_39445.c_getkeyid.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_39445.c_getkeyid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"/dev/tty\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@stdin = common dso_local global i32* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@EOF = common dso_local global i32 0, align 4
@_O_TEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getkeyid(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca [20 x i8], align 16
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %8 = call i32 @open(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 2)
  %9 = call i32* @fdopen(i32 %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %9, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32*, i32** @stdin, align 8
  store i32* %12, i32** %4, align 8
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @setbuf(i32* %14, i8* null)
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* @stderr, align 4
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @fprintf(i32 %17, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8* %18)
  %20 = load i32, i32* @stderr, align 4
  %21 = call i32 @fflush(i32 %20)
  store i64 0, i64* %6, align 8
  %22 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 0
  %23 = call i32 @COUNTOF(i8* %22)
  %24 = sub nsw i32 %23, 1
  %25 = sext i32 %24 to i64
  store i64 %25, i64* %7, align 8
  br label %26

26:                                               ; preds = %40, %16
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = icmp ult i64 %27, %28
  br i1 %29, label %30, label %38

30:                                               ; preds = %26
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @getc(i32* %31)
  store i32 %32, i32* %3, align 4
  %33 = icmp ne i32 %32, 10
  br i1 %33, label %34, label %38

34:                                               ; preds = %30
  %35 = load i32, i32* %3, align 4
  %36 = load i32, i32* @EOF, align 4
  %37 = icmp ne i32 %35, %36
  br label %38

38:                                               ; preds = %34, %30, %26
  %39 = phi i1 [ false, %30 ], [ false, %26 ], [ %37, %34 ]
  br i1 %39, label %40, label %46

40:                                               ; preds = %38
  %41 = load i32, i32* %3, align 4
  %42 = trunc i32 %41 to i8
  %43 = load i64, i64* %6, align 8
  %44 = add i64 %43, 1
  store i64 %44, i64* %6, align 8
  %45 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 %43
  store i8 %42, i8* %45, align 1
  br label %26

46:                                               ; preds = %38
  %47 = load i64, i64* %6, align 8
  %48 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 %47
  store i8 0, i8* %48, align 1
  %49 = load i32*, i32** %4, align 8
  %50 = load i32*, i32** @stdin, align 8
  %51 = icmp ne i32* %49, %50
  br i1 %51, label %52, label %55

52:                                               ; preds = %46
  %53 = load i32*, i32** %4, align 8
  %54 = call i32 @fclose(i32* %53)
  br label %55

55:                                               ; preds = %52, %46
  %56 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 0
  %57 = call i32 @atoi(i8* %56)
  ret i32 %57
}

declare dso_local i32* @fdopen(i32, i8*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @setbuf(i32*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @COUNTOF(i8*) #1

declare dso_local i32 @getc(i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
